--- a/index.html
+++ b/index.html
@@ -148,14 +148,20 @@
             <p class="small">WhatsApp: <a href="https://wa.me/919567487707">Chat on WhatsApp</a></p>
 
             <h4 style="margin-top:10px">Quick contact form</h4>
-            <form onsubmit="event.preventDefault();alert('Thanks — we will contact you soon! (This is a demo form)')">
-              <div style="display:flex;gap:8px;margin-bottom:8px">
-                <input required placeholder="Your name" style="flex:1;padding:10px;border-radius:8px;border:1px solid #eee">
-                <input required placeholder="Phone / WhatsApp" style="width:160px;padding:10px;border-radius:8px;border:1px solid #eee">
-              </div>
-              <textarea placeholder="Message / Query" style="width:100%;height:80px;padding:10px;border-radius:8px;border:1px solid #eee"></textarea>
-              <div style="margin-top:8px"><button class="cta" style="border:none;cursor:pointer">Send Message</button></div>
-            </form>
+         <form action="https://formspree.io/f/xnngazzo" method="POST">
+  <div style="display:flex;gap:8px;margin-bottom:8px">
+    <input type="text" name="name" placeholder="Your name" required
+           style="flex:1;padding:10px;border-radius:8px;border:1px solid #eee">
+    <input type="text" name="phone" placeholder="Phone / WhatsApp" required
+           style="width:160px;padding:10px;border-radius:8px;border:1px solid #eee">
+  </div>
+  <textarea name="message" placeholder="Message / Query" required
+            style="width:100%;height:80px;padding:10px;border-radius:8px;border:1px solid #eee"></textarea>
+  <div style="margin-top:8px">
+    <button type="submit" class="cta" style="border:none;cursor:pointer">Send Message</button>
+  </div>
+</form>
+
           </div>
 
           <div>
