--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <img src="logo.png" alt="IYRRA Logo" class="logo-img">
+        <img src="logo.png.jpg" alt="IYRRA Logo" class="logo-img">
         <div>
           <h1>IYRRA Cosmetic Centre</h1>
           <div class="tag">BE HAPPY , STAY BEAUTY</div>
@@ -186,3 +186,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
